Fix bottom spacing

--- a/src/styles/Stopwatch.scss
+++ b/src/styles/Stopwatch.scss
@@ -2,7 +2,7 @@
 
 .stopwatch {
   position: absolute;
-  bottom: 60px;
+  bottom: 100px;
   font-size: 48px;
   font-weight: bold;
   color: #fff;
@@ -40,7 +40,6 @@
 
 @include medium {
   .stopwatch {
-    bottom: 100px;
     right: 100px;
 
     &-display {
