--- a/src/styles/Timer.scss
+++ b/src/styles/Timer.scss
@@ -5,8 +5,7 @@
   flex-direction: column;
   justify-content: center;
   position: absolute;
-  bottom: 60px;
-  // right: 100px;
+  bottom: 100px;
   font-size: 48px;
   font-weight: bold;
   font-family: monospace;
@@ -67,7 +66,6 @@
 
 @include medium {
   .timer {
-    bottom: 100px;
     right: 100px;
 
     &-form {
